Update README.md
Put the following back in:

Also in the Java tab, enter "-XX:MaxPermSize=128m" in the JVM Arguments field